@@ -28,6 +28,7 @@ ADD_OPENS_JAVA_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED \
     --add-opens java.base/java.math=ALL-UNNAMED \
     --add-opens java.base/java.util=ALL-UNNAMED \
     --add-opens java.base/jdk.internal.misc=ALL-UNNAMED \
+    --add-opens java.base/jdk.internal.access=ALL-UNNAMED \
     --add-opens java.base/sun.nio.ch=ALL-UNNAMED "
 
 # used by rpm, deb, zip and docker distributions
